NXP-15561: make the Agenda MP dependent of nuxeo-opensocial for now

--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -17,6 +17,9 @@
   <platforms>
     <platform>cap-@DISTRIB_VERSION@</platform>
   </platforms>
+  <dependencies>
+    <package>nuxeo-opensocial</package>
+  </dependencies>
   <license>LGPL 2.1</license>
   <license-url>http://www.gnu.org/licenses/lgpl-2.1.html</license-url>
   <visibility>PUBLIC</visibility>
