--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -16,7 +16,11 @@
   <supported>false</supported>
   <platforms>
     <platform>cap-@DISTRIB_VERSION@</platform>
+    <platform>cap-@DISTRIB_VERSION@-HF*</platform>
   </platforms>
+  <dependencies>
+    <package>cap-6.0-HF09</package>
+  </dependencies>
   <license>LGPL 2.1</license>
   <license-url>http://www.gnu.org/licenses/lgpl-2.1.html</license-url>
   <visibility>PUBLIC</visibility>
