--- a/marketplace/src/main/resources/package.xml
+++ b/marketplace/src/main/resources/package.xml
@@ -2,8 +2,9 @@
 <package type="addon" name="nuxeo-agenda" version="@VERSION@">
   <title>Nuxeo Agenda</title>
   <description>
-    <p>Nuxeo Agenda enables users to create events that will be displayed to users in a dedicated agenda gadget on their dashboard.</p>
-    <p>As soon as a user can access the workspace or folder in which the event has been created, he can see the event in the agenda gadget.</p>
+    <p>Nuxeo Agenda enables users to create events that will be displayed to users in a dedicated agenda widget on their dashboard.</p>
+    <p>As soon as a user can access the workspace or folder in which the event has been created, he can see the event in the agenda widget.</p>
+    <p>This package depends on 6.0 HF10.</p>
   </description>
   <home-page>http://doc.nuxeo.com/x/BoGo</home-page>
   <vendor>Nuxeo</vendor>
@@ -19,9 +20,9 @@
     <platform>cap-@DISTRIB_VERSION@-HF*</platform>
   </platforms>
   <dependencies>
-    <package>nuxeo-6.0-HF09</package>
+    <package>nuxeo-6.0-HF10</package>
   </dependencies>
   <license>LGPL 2.1</license>
   <license-url>http://www.gnu.org/licenses/lgpl-2.1.html</license-url>
-  <visibility>PUBLIC</visibility>
+  <visibility>MARKETPLACE</visibility>
 </package>
