--- a/ftest/webdriver/pom.xml
+++ b/ftest/webdriver/pom.xml
@@ -35,6 +35,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.distribution</groupId>
+      <artifactId>nuxeo-marketplace-jsf-ui</artifactId>
+      <type>zip</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.marketplace.agenda</groupId>
       <artifactId>marketplace-agenda</artifactId>
       <type>zip</type>
